tests/sksl/errors/golden/GrBothExplicitReturnAndSkOutColor.cpp
### Compilation failed:

error: 3: Fragment processors must not mix sk_OutColor and return statements

1 error
